# supernova

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: arithmetization.rs  commitment.rs  errors.rs  lib.rs
src/arithmetization/: r1cs.rs
src/arithmetization/r1cs/: circuit.rs  constraint_system.rs  step_circuit.rs
