[package]
name = "supernova"
version = "0.1.0"
authors = [ "Jules de Smit <julesdesmit@gmail.com>" ]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bellperson = "0.24"
bincode = "1.3"
group = "0.12"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
itertools = "0.10.5"
neptune = "8.1"
rayon = "1.6.1"
sha3 = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
typenum = "1.16"
