[package]
name = "supernova"
version = "0.1.0"
authors = [ "Jules de Smit <julesdesmit@gmail.com>" ]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge", "r1cs"] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
itertools = "0.10.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.6.1"
sha3 = "0.8.2"
